eclipseWorkSpaces/corman/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:20:26 **** Incremental Build of configuration Debug for project 06_quickSort_prj ****
make all 
Building file: ../src/quick_sort.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/quick_sort.d" -MT"src/quick_sort.o" -o "src/quick_sort.o" "../src/quick_sort.cpp"
Finished building: ../src/quick_sort.cpp
 
Building target: 06_quickSort_prj
Invoking: GCC C++ Linker
g++  -o "06_quickSort_prj"  ./src/main.o ./src/quick_sort.o   
Finished building target: 06_quickSort_prj
 
19:20:36 **** Incremental Build of configuration Debug for project 06_quickSort_prj ****
make all 
make: Nothing to be done for 'all'.
19:21:13 **** Incremental Build of configuration Debug for project 06_quickSort_prj ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main(int, char**)’:
../src/main.cpp:32:2: error: ‘quickSort’ was not declared in this scope
   32 |  quickSort(data, size);
      |  ^~~~~~~~~
make: *** [src/subdir.mk:23: src/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
19:22:11 **** Incremental Build of configuration Debug for project 06_quickSort_prj ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: 06_quickSort_prj
Invoking: GCC C++ Linker
g++  -o "06_quickSort_prj"  ./src/main.o ./src/quick_sort.o   
Finished building target: 06_quickSort_prj
 
19:22:27 **** Incremental Build of configuration Debug for project 06_quickSort_prj ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
Finished building: ../src/main.cpp
 
Building target: 06_quickSort_prj
Invoking: GCC C++ Linker
g++  -o "06_quickSort_prj"  ./src/main.o ./src/quick_sort.o   
Finished building target: 06_quickSort_prj
 
